--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ master ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -12,14 +12,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
-    - name: run gtest
-      run: g++ *.cc && ./a.out
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: Install gtest
+        run: sudo apt install libgtest-dev cmake
+      
+      - name: Configure gtest
+        working-directory: /usr/src/gtest
+        run: sudo cmake CMakeLists.txt
+        
+      - name: Build gtest
+        working-directory: /usr/src/gtest
+        run: sudo make
+        
+      - name: Copy libraries
+        working-directory: /usr/src/gtest
+        run: sudo cp *.a /usr/lib
+        
+      - name: Compile
+        run: g++ -Wall -g -pthread *.cc -lgtest_main  -lgtest -lpthread -o main
+        
+      - name: Run
+        run: ./main
